* Fixed menu column glitch on mobile

--- a/_sass/menu.mobile.scss
+++ b/_sass/menu.mobile.scss
@@ -1,3 +1,7 @@
 #menu > div {
   grid-template-columns: auto;
+
+  > h2 {
+    grid-column: 1 / 2;
+  }
 }
